# VideoPlayerApp

videovish-app/: package.json
videovish-app/src/: composables.ts  main.ts
videovish-app/src-tauri/: Cargo.toml  tauri.conf.json
videovish-app/src-tauri/capabilities/: desktop.json
videovish-app/src-tauri/src/: main.rs
videovish-app/src/views/: Player.vue  YouTube.vue
