[package]
name = "videovish-tauri"
version = "2.1.4-beta"
description = "VideOVish"
authors = ["Bernard-Borg"]
license = "GNU GPLv3"
repository = "https://github.com/Bernard-Borg/VideOVish"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
glob = "0.3.1"
fs_extra = "1.3.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"
